Remove order_index and make it much more robust
